# SAM3DBody-cpp-CoreML

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  profile_decoder.py
AmMatrix/: CMakeLists.txt
AmMatrix/TestCPUOptimizedInstructionSet/: CMakeLists.txt
GraphicsEngine/: README.md
GraphicsEngine/ModelLoader/: model_loader_transform_joints.c
GraphicsEngine/MotionCaptureLoader/: bvh_loader.c  mathLibrary.h
GraphicsEngine/System/: glx3.c  glx3.h
blender/: blender_bvh_plugin.py
coreml_export/: README.md  download_coreml_models.sh  export_coreml_backbone.py  export_coreml_decoder.py  export_coreml_yolo.py  requirements.txt
render/: fast_sam_3dbody_render.cpp  offline_sam_3dbody_render.cpp
scripts/: batch_video.sh  build.sh  build_joint_table.py  offline_video.sh  video.sh
src/: bvh_writer.cpp  bvh_writer.h  cli_common.h  coreml_backbone.cpp  coreml_backbone.h  coreml_backbone.mm  coreml_decoder.cpp  coreml_decoder.h  coreml_decoder.mm  coreml_utils.cpp  coreml_utils.h  coreml_utils.mm  coreml_yolo.cpp  coreml_yolo.h  coreml_yolo.mm  fast_sam_3dbody.cpp  fast_sam_3dbody.h  main.cpp  mhr_joint_table.h  outputFiltering.h  preprocess.hpp
tools/: analyze_skeletons.py  quantization_benchmark.sh  quantize_backbone.py  quantize_backbone.sh  verify_bvh_motion.py
